# OpenCVQmlExampleProject

./: .gitignore  CMakeLists.txt  config.json
qml/: Main.qml
src/: cvimageprovider.cpp  cvimageprovider.h  main.cpp  streamer.cpp  streamer.h
